--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "@adonisjs/core": "^6.2.2",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^20.1.0",
+    "@adonisjs/mail": "^9.2.0",
     "@adonisjs/session": "^7.1.1",
     "@vinejs/vine": "^1.7.1",
     "better-sqlite3": "^9.4.1",
+    "edge.js": "^6.0.1",
     "luxon": "^3.4.4",
     "mysql2": "^3.9.1",
     "reflect-metadata": "^0.2.1"
