--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@vinejs/vine": "^1.7.1",
     "better-sqlite3": "^9.4.1",
     "edge.js": "^6.0.1",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "mysql2": "^3.9.1",
     "reflect-metadata": "^0.2.1"
