--- a/package.json
+++ b/package.json
@@ -56,13 +56,18 @@
     "@adonisjs/lucid": "^20.1.0",
     "@adonisjs/mail": "^9.2.0",
     "@adonisjs/session": "^7.1.1",
+    "@googlemaps/google-maps-services-js": "^3.3.34",
     "@vinejs/vine": "^1.7.1",
+    "africastalking": "^0.5.5",
+    "axios": "^0.21.1",
     "better-sqlite3": "^9.4.1",
     "edge.js": "^6.0.1",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
     "mysql2": "^3.9.1",
-    "reflect-metadata": "^0.2.1"
+    "reflect-metadata": "^0.2.1",
+    "ussd-builder" : "git://github.com/InnocentWahome/ussd-builder.git",
+    "nodemon": "^2.0.7"
   },
   "eslintConfig": {
     "extends": "@adonisjs/eslint-config/app"
