--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ NODE_ENV=development
 SESSION_DRIVER=cookie
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_USER=root
+DB_USER=wahome
 DB_PASSWORD=
 DB_DATABASE=
 SMTP_HOST=
